[package]
name = "walker-yt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
futures = "0.3"
tempfile = "3.10"
reqwest = { version = "0.11", features = ["json"] }
shellexpand = "3.1"
